	- ...mostly spurred from a lot of development in this area due to NPC work
- Added "Guide Mode" to Terrain Adjust tool: keep SHIFT pressed and you'll be able to draw terrain along straight lines
- Added new "Tungsten" material - the heaviest in Floating Sandbox's library!
- Fixed a ShipBuilder bug that was messing up copy-and-paste of electrical elements
- ...and a few more small improvements here and there!
- Musical theme for this release: Carbon Based Lifeforms, entire discography

1.18.0
- Significant performance improvements, especially on multi-core CPU's - where frame rates have improved by at least 2x
	- Parallelized integration, spring relaxation, and ocean floor collision detection
	- Vectorized spring relaxation
	- Used a small part of the performance gains to improve rigidity by 33%
	- Note: remember that Floating Sandbox is capped at 64FPS, so do not expect to get more than that. These performance improvements benefit large ships which in previous versions would run at less than 64FPS
- Re-designed wave interactions - user-spawned waves are now more natural and smooth
- Revamped rendering of ocean
	- Added lighting effects of clouds onto ocean
		- Thanks to Denis Nesterenco for the fantastic idea!
		- Note: disabled by default on lower-end computers
	- Changed some defaults for a more moving experience
	- Fixed depth gradients (which were suffering from color banding)
- Re-designed night ambient
	- Added moon lighting
		- Thanks to Joadix for the fantastic idea!
		- Note: can be controlled in the "Rendering" section of the Settings window		
	- Added crepuscular gradient
		- Note: can be controlled in the "Rendering" section of the Settings window
		- Note: disabled by default on lower-end computers
	- Added menu entry to suddenly switch to full day or full night
- Small improvements to various tools (among which Thanos Snap, Anti-Matter Bomb, and Blast)
	- Check out the new SHIFT mode with the Thanos Snap!