@@ -13,6 +13,7 @@
 - Added "Guide Mode" to Terrain Adjust tool: keep SHIFT pressed and you'll be able to draw terrain along straight lines
 - Added new "Tungsten" material - the heaviest in Floating Sandbox's library!
 - Fixed a ShipBuilder bug that was messing up copy-and-paste of electrical elements
+- Fixed a ShipBuilder bug with the electrical panel not showing some changes to the electrical layer
 - ...and a few more small improvements here and there!
 - Musical theme for this release: Carbon Based Lifeforms, entire discography
 
